--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,10 @@
-# Default NAMESPACE created by R
-# Remove the previous line if you edit this file
+export(dmnorm,estim,mmeln,post,entropy)
+S3method(anova , mmeln)
+S3method(logLik, mmeln)
+S3method(estim , mmeln)
+S3method(print , mmeln)
+S3method(plot  , mmeln)
+S3method(entropy,mmeln)
+S3method(print , mmelnSOL)
+S3method(post  , mmeln)
 
-# Export all names
-exportPattern(".")
