--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,4 +7,6 @@ S3method(plot  , mmeln)
 S3method(entropy,mmeln)
 S3method(print , mmelnSOL)
 S3method(post  , mmeln)
-
+importFrom("graphics", "matplot", "mtext", "par")
+importFrom("stats", "logLik", "model.matrix", "na.action",
+           "na.exclude", "pchisq", "pnorm", "rnorm", "var")
