--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,16 @@
 Package: mmeln
 Type: Package
-Title: MMELN : Estimation of multinormal mixture distribution.
-Version: 1.1
-Date: 2012-11-14
+Title: Estimation of Multinormal Mixture Distribution
+Version: 1.2
+Date: 2015-09-23
 Author: Charles-Edouard Giguere
-Maintainer: Charles-Edouard Giguere <ce.giguere@umontreal.ca>
+Maintainer: Charles-Edouard Giguere <ce.giguere@gmail.com>
 Description: Fit multivariate mixture of normal distribution using
         covariance structure.
-License: GPL (>= 2)
+License: GPL-3
 LazyLoad: yes
-Packaged: 2013-02-04 04:02:23 UTC; giguerch
+Packaged: 2015-09-25 14:16:12 UTC; gigc2
 Repository: CRAN
-Date/Publication: 2013-02-11 16:35:13
+Encoding: UTF-8
+Date/Publication: 2015-09-25 16:19:10
+NeedsCompilation: no
